Fixed reactor calculation. Fixed reactor canvas spacing issue.

--- a/src/css/components/reactor.less
+++ b/src/css/components/reactor.less
@@ -22,6 +22,10 @@
         margin-left: 10px;
         border: 1px solid lighten(@bg-color5, 6%);
     }
+
+    canvas {
+        display: block;
+    }
 }
 
 .analyzer-selection-overlay {
